<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BSR Noise Detector</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="stopped">Stopped</string>
    <string name="listening">Listening\u2026</string>
    <string name="waiting">Waiting for audio\u2026</string>
    <string name="all_classes">All Classes</string>
    <string name="recent_detections">Recent Detections</string>
    <string name="mic_permission_required">Microphone permission is required to detect noise.</string>
</resources>
